# Open-PoniX

./: .gitignore  README.md
ponix4-src/source/Xdialog-2.3.1/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.my  README  Xdialog.lang  Xdialog.spec  acconfig.h  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  myconf.sh  myconf.sh.old  myconf.sh~
ponix4-src/source/Xdialog-2.3.1/2/: libexpat.la
ponix4-src/source/Xdialog-2.3.1/debian/: changelog  control  copyright  menu  rules  watch  xdialog.doc-base  xdialog.man.diff
ponix4-src/source/Xdialog-2.3.1/doc/: Makefile  Makefile.am  Makefile.in  Xdialog.man  authors.html  box.html  changelog.head  changelog.tail  common.html  compatibility.html.in  faq.html  gtk.html  index.html.in  intro.html  license.head  license.tail  special.html  syntax.html  transient.html
ponix4-src/source/Xdialog-2.3.1/lib/: Makefile  getopt.c  libXft.la  libfontconfig.la  libgdk-x11-2.0.la  libglib-2.0.la  libgmodule-2.0.la  libgthread-2.0.la  libpango-1.0.la  libpangox-1.0.la
ponix4-src/source/Xdialog-2.3.1/lib.def/: Makefile  Makefile.am  Makefile.in  getopt1.c
ponix4-src/source/Xdialog-2.3.1/m4/: ChangeLog  Makefile  Makefile.in
ponix4-src/source/Xdialog-2.3.1/po/: ChangeLog  Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  Xdialog.pot  ca.gmo  ca.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  nl.gmo  nl.po  no_NO.gmo  no_NO.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  sv_SE.gmo  sv_SE.po
ponix4-src/source/Xdialog-2.3.1/samples/: Xdialog.wrapper.c  Xmessage  Xmore  allrpms  bluebox.rc  buildlist  calendar  chain  checklist  dselect  editbox  fixed-font.rc  format1440  fselect  gauge  infobox  infobox2  inputbox  install-wrapper  kernel  logbox  logbox2  login  menubox  msgbox  no-entry.xpm  radiolist  rangebox  set-time  tailbox  textbox  timebox  treeview  xlock-wrapper  yesno
ponix4-src/source/Xdialog-2.3.1/src/: 1  Makefile.am  Makefile.in  Makefile~  callbacks.c  callbacks.h  help.xpm  interface.c  interface.c~  interface.h  main.c  next.xpm  no.xpm  previous.xpm  print.xpm  support.c  support.h  upadd.c  upadd.c~  utf8count.c  yes.xpm
ponix4-src/source/acpid-2.0.23/: Changelog  Makefile  Makefile.am  Makefile.in  README  TESTPLAN  TODO  acpi_ids.c  acpi_listen.c  acpid-design.odg  acpid.c  acpid.h  config.h  config.h.in  config.status  configure  configure.ac  connection_list.c  connection_list.h  event.c  event.h  inotify_handler.c  input_layer.c  libnetlink.h  log.c  log.h  myconf.sh~  netlink.c  proc.c  proc.h  sock.c  sock.h  ud_socket.c  ud_socket.h
ponix4-src/source/acpid-2.0.23/.deps/: acpi_ids.Po  acpi_listen.Po  acpid.Po  connection_list.Po  event.Po  inotify_handler.Po  input_layer.Po  libnetlink.Po  log.Po  netlink.Po  proc.Po  sock.Po  ud_socket.Po
ponix4-src/source/acpid-2.0.23/kacpimon/: Makefile  Makefile.am  Makefile.in  README  acpi_ids.c  acpi_ids.h  connection_list.c  connection_list.h  input_layer.c  input_layer.h  kacpimon.8  kacpimon.c  kacpimon.h  libnetlink.c  netlink.c  sample.out
ponix4-src/source/acpid-2.0.23/samples/: acpi_handler-conf  acpi_handler.sh  power  power.sh
ponix4-src/source/alsa/alsamixergui-0.9.0rc2-1.orig/: AUTHORS  ChangeLog  README  configure.in
ponix4-src/source/alsa/aumix-2.6.1/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in
ponix4-src/source/alsa/aumix-2.8/: ABOUT-NLS  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in
ponix4-src/source/alsa/aumix-2.9.1/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  bootstrap  config.h.in  configure  configure.ac
ponix4-src/source/alsa/gamix-1.11/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.euc  acconfig.h  aclocal.m4  confdefs.h  config.h.in  configure  configure.in  libtool  mkinstalldirs  mktar.mk
ponix4-src/source/alsa/gamix-1.99.p13/: ChangeLog  Makefile  Makefile.am  Makefile.in  README.euc  acconfig.h  aclocal.m4  autogen.sh  config.h  config.h.in~  config.status  configure  configure.in  libtool  mkinstalldirs
ponix4-src/source/alsa/gamix-1.99.p14/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool
ponix4-src/source/binwalk-0.4.5/src/: Makefile  Makefile.in  binwalk  binwalk.c  binwalk.h  common.c  common.h  config.h  config.status  configure  configure.ac  dd.c  dd.h  filter.c  filter.h  md5.c  md5.h  mparse.c  mparse.h  update.c  update.h
ponix4-src/source/fbpanel/xmobar-0.15/: Setup.lhs  news.md  readme.md  xmobar.cabal
ponix4-src/source/imlib-1.8.2/gdk_imlib/: ChangeLog  Makefile  Makefile.am  Makefile.in  colors.c  gdk_imlib.h  gdk_imlib_private.h  globals.c  load.c  misc.c  rend.c  save.c  utils.c
ponix4-src/source/libgssglue-0.4/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  config.status  configure  configure.in  libgssglue.pc.in  libtool
ponix4-src/source/libgssglue-0.4/debian/: changelog  control  copyright  libgssapi1.install  watch
ponix4-src/source/libgssglue-0.4/src/: Makefile  Makefile.am  Makefile.in  g_accept_sec_context.c  g_acquire_cred.c  g_canon_name.c  g_ccache_name.c  g_compare_name.c  g_context_time.c  g_delete_sec_context.c  g_dsp_name.c  g_dsp_status.c  g_dup_name.c  g_exp_name.c  g_exp_sec_context.c  g_get_mic.c  g_glue.c  (+29 more)
ponix4-src/source/patch-2.6.1/: Makefile  Makefile.in  aclocal.m4  config.h  config.hin  config.status  configure  configure.ac  update-version.sh
ponix4-src/source/plymouth-0.8.8/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  mymake.sh  mymake.sh~
(+63540 files in other folders)
