SUBDIRS = src themes images scripts docs systemd-units

DISTCHECK_CONFIGURE_FLAGS = --disable-tests --without-system-root-install

EXTRA_DIST = ChangeLog                                                         \
             README

MAINTAINERCLEANFILES = aclocal.m4                                              \
                       config.h.in                                             \
                       config.h.in~                                            \
                       config.sub                                              \
                       configure                                               \
                       Makefile.in
