dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/alsamixer.cxx)
AM_INIT_AUTOMAKE(alsamixergui, 0.9.0rc1-2)
AC_PREFIX_DEFAULT(/usr)
AM_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_LIB(fltk,numericsort,,AC_MSG_ERROR("missing fltk"))
AM_PATH_ALSA(0.9.0)

dnl Checks for header files.
AC_HEADER_STDC
AC_HAVE_HEADERS(stdio.h string.h stdlib.h getopt.h alsa/asoundlib.h FL/Fl.H)

AC_OUTPUT(Makefile src/Makefile)
